# aitranslate

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml  download_model.py  main.py  requirements.txt
ai-realchat/: .gitignore  README.md  TEST_SCENARIOS.md
ai-realchat/backend/: .env.example  main.py  openai_service.py  requirements.txt
ai-realchat/backend/tests/: test_voice_api.py
ai-realchat/frontend/: package.json
ai-realchat/frontend/pages/: index.js
backend/: .env.example  Dockerfile  openai_service.py
backend/tests/: test_main_helpers.py  test_openai_service_helpers.py
frontend/: Dockerfile  package-lock.json
frontend/pages/: index.js
frontend/styles/: globals.css
proto/: realtime.proto
scripts/: dev-down.sh  dev-up.sh
src/: main.rs
static/: app.js  history.html  index.html
